# inbox_zero

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  pytest.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement.md  feature_request.md
.github/templates/: bug-report.md  feature-request.md  pull_request_template.md
notebooks/: zoom.ipynb
src/: GmailAuthenticator.py  GmailReader.py  OpenAIAgent.py  app.py  quickstart.py
src/LangGraph/: __init__.py  factory.py  state_manager.py  workflow.py  workflow_factory.py
src/agent/: OpenAIAgent.py  openai_agent.py
src/gmail/: GCalendar.py  GmailAuthenticator.py  GmailCalendar.py  GmailReader.py  GmailWriter.py  __init__.py  gmail_authenticator.py  gmail_reader.py  gmail_writer.py
src/models/: agent.py  gmail.py  slack.py  toolfunction.py
src/routes/: __init__.py  flask_routes.py  slack_handlers.py
src/routes/flask/: flask_routes.py
src/routes/integrations_slack/: __init__.py  slack_routes.py
src/slack/: DraftApprovalHandler.py  Slack.py  SlackAuthenticator.py  SlackGmailBridge.py  actions.py  draft_approval_handler.py  slack_authenticator.py  workflow_bridge.py
src/slack_handlers/: draft_approval_handler.py  workflow_bridge.py
src/utils/: load_dotenv.py  load_env.py
src/workflows/: __init__.py  factory.py  workflow.py  workflow_factory.py
tests/: conftest.py
tests/logging/: test_draft_approval_handler_logging.py  test_main_logging_setup.py  test_slack_routes.py
(+3 files in other folders)
