[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox_zero"
version = "0.1.0"
description = "Inbox Zero"
authors = [{ name = "Kishen Sharma", email = "kishen.codes@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
